--- a/apps/dashboard/src/app/phones/phones-details/phones-details.component.html
+++ b/apps/dashboard/src/app/phones/phones-details/phones-details.component.html
@@ -1,1 +1,26 @@
-<p>phones-details works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      <h1>
+        <span *ngIf="currentPhone.id; else elseBlock">{{originalTitle}}</span>
+        <ng-template #elseBlock>Select a phone</ng-template>
+      </h1>
+    </mat-card-title>
+  </mat-card-header>
+  <form [formGroup]="form" (submit)="saved.emit(currentPhone)">
+    <mat-card-content>
+      <mat-form-field class="full-width">
+        <input matInput placeholder="brand" formControlName="brand" type="text" name="brand">
+        <mat-error *ngIf="form.get('brand')">Required Field</mat-error>
+      </mat-form-field>
+      <mat-form-field class="full-width">
+        <input matInput placeholder="Name" formControlName="name" type="text" name="name">
+        <mat-error *ngIf="form.get('name').hasError('required')">Required Field</mat-error>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button type="submit" [disabled]="form.invalid" mat-button color="primary">{{currentPhone.id ? 'Save' : 'Create'}}</button>
+      <button type="button" mat-button (click)="cancelled.emit(currentPhone)">Cancel</button>
+    </mat-card-actions>
+  </form>
+</mat-card>
