--- a/apps/dashboard/src/app/phones/phones-item/phones-item.component.html
+++ b/apps/dashboard/src/app/phones/phones-item/phones-item.component.html
@@ -1,1 +1,21 @@
-<p>phones-item works!</p>
+<div *ngIf="phone$ | async as phone" class="container-fixed container w-100">
+  <div class="card-wrapper">
+    <mat-card
+      class="d-flex justify-content-center flex-column align-items-center"
+    >
+      <mat-card-header>
+        <mat-card-title>
+          <p class="text-center">{{ phone.brand }}</p>
+        </mat-card-title>
+        <mat-card-subtitle>
+          <p class="text-center">{{ phone.name }}</p>
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-actions>
+        <button mat-button color="primary" (click)="goBackToPhones()">
+          <mat-icon>reply</mat-icon>
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
