--- a/apps/dashboard/src/app/wild/wild.component.html
+++ b/apps/dashboard/src/app/wild/wild.component.html
@@ -1,1 +1,6 @@
-<p>wild works!</p>
+
+<div class="d-flex justify-content-center flex-column align-items-center h-100">
+  <h1>404. Page not found...</h1>
+
+  <button mat-stroked-button color="primary" (click)="redirectToPhones()">Click here to Redirect to Phones</button>
+</div>
